eventeditors: Don't validate the end date for journals.

Journals don't have end date.

BUG: 311097